test/resources/case1_audit_from_cache/constraint-ingress.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: Case1Template
metadata:
  name: case1-ingress-deny
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
