test/resources/case1_audit_from_cache/constraint-pod-2.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: Case1Template
metadata:
  name: case1-pod-deny-2
spec:
  match:
    excludedNamespaces: ["case1-allow"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
