test/resources/case1_audit_from_cache/constraint-storageclass.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: Case1Template
metadata:
  name: case1-storageclass-deny
spec:
  match:
    kinds:
      - apiGroups: ["storage.k8s.io"]
        kinds: ["StorageClass"]
