test/resources/case1_audit_from_cache/constraint-wrong.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: Case1Template
metadata:
  name: case1-worng
spec:
  match:
    kinds:
      - apiGroups: ["ohmyhappy.sad.io"]
        kinds: ["alien"]
