test/resources/case1_audit_from_cache/gatekeeper.yaml
apiVersion: operator.gatekeeper.sh/v1alpha1
kind: Gatekeeper
metadata:
  name: gatekeeper
spec:
  # Add fields here
  audit:
    replicas: 2
    logLevel: DEBUG
    auditInterval: 20s
    auditFromCache: Automatic
