test/resources/case1_audit_from_cache/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: case1-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
